# solana-smart-payments

./: .gitignore  Anchor.toml  Cargo.toml  README.md  app.js  index.html  package-lock.json  package.json
app/: app.js  index.html
programs/solana_smart_payments/: Cargo.toml
programs/solana_smart_payments/src/: lib.rs
tests/: solana-smart-payments.js
